# GenomicLightning

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_ACHIEVEMENT_SUMMARY.md  Dockerfile  FuGEP.code-workspace  README.md  WORKFLOW_TRIGGER.md  check_deployment.sh  check_flake8.py  check_latest_status.py  check_workflow_status.csh  comprehensive_f401_fix.py  debug_syntax.py  deploy.sh  docker-compose.yml  file_test.py  final_workflow_status.json  fix_unused_imports.py  flake8_violations.txt  get_f401.py  install_output.txt  latest_status.json  latest_workflow_status.json  memory_leak_fix.py  monitor_github_actions.csh  pre_push_verify.csh  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_metric_tests.py  setup.py  simple_flake8_test.py  simple_test.py  test_build_fix.py  test_github_actions.csh  test_import.py  test_import_debug.py  test_imports.py  (+8 more)
.github/workflows/: ci.yml  release.yml  testing.yml
docs/: docker_deployment.md  migration_guide.md  production_deployment.md
examples/: large_data_training_example.py  simple_training_example.py  uavarprior_integration_example.py
genomic_lightning/: __init__.py
genomic_lightning/callbacks/: __init__.py  genomic_callbacks.py
genomic_lightning/cli/: __init__.py  main.py
genomic_lightning/config/: __init__.py  factory.py  loader.py
genomic_lightning/data/: __init__.py  base.py  data_modules.py  genomic_datasets.py  sampler_adapter.py  sampler_data_module.py  sharded_data_module.py
genomic_lightning/lightning_modules/: __init__.py  base.py  chromdragonn.py  danq.py  deepsea.py
genomic_lightning/metrics/: __init__.py  genomic_metrics.py  torchmetrics_compat.py
genomic_lightning/models/: __init__.py  base.py  chromdragonn.py  danq.py  deepsea.py
genomic_lightning/utils/: __init__.py  legacy_import.py  model_conversion.py  prediction_utils.py  sampler_utils.py  wrapper_conversion.py
genomic_lightning/variant_analysis/: __init__.py  variant_effect.py
genomic_lightning/visualization/: __init__.py  motif_visualization.py
k8s/: deployment.yaml  pvc.yaml
scripts/: bump_version.py  convert_legacy_model.py  generate_sample_data.py  get_version.py  predict_variant_effects.py  train_genomic_model.py  version_manager.py
tests/: __init__.py  test_functionality.py  test_import.py  test_infrastructure.py
tests/data/: __init__.py  test_sharded_data_module.py
tests/integration/: test_end_to_end.py
tests/metrics/: __init__.py  test_genomic_metrics.py
tests/models/: __init__.py  test_danq_chromdragonn.py
tests/smoke/: test_basic_functionality.py
