[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomic-lightning"
version = "0.1.0"
description = "PyTorch Lightning framework for genomic deep learning"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sanjeeva Dodlapati", email = "sdodlapati3@gmail.com"}
]
keywords = ["genomics", "deep learning", "pytorch", "lightning", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12.0",
    "pytorch-lightning>=1.8.0",
    "torchmetrics>=0.10.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pyyaml>=5.4.0",
    "h5py>=3.6.0",
    "tqdm>=4.62.0",
    "click>=8.0.0",
    "tensorboard>=2.8.0",
    "biopython>=1.79",
    "pyfaidx>=0.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0"
]

[project.urls]
Homepage = "https://github.com/sdodlapati3/GenomicLightning"
Repository = "https://github.com/sdodlapati3/GenomicLightning"
Documentation = "https://github.com/sdodlapati3/GenomicLightning/docs"
"Bug Tracker" = "https://github.com/sdodlapati3/GenomicLightning/issues"

[project.scripts]
genomic-lightning = "genomic_lightning.cli.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["genomic_lightning*"]
exclude = ["tests*", "docs*", "examples*", "configs*", "scripts*"]

[tool.setuptools.package-data]
genomic_lightning = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true